<resources>
    <string name="app_name">WebServices</string>
    <string name="load_app_posts_message">Wczytywanie wszystkich postów</string>
    <string name="no_posts">Brak wyników</string>
    <string name="input_post_id">ID posta</string>
    <string name="comments_switch">Komentarze</string>
    <string name="wyszukaj_post_po_id">Post id</string>
    <string name="wyszukaj_komentarz_po_id">Comment id</string>
    <string name="wszystkie_posty">Posty</string>
    <string name="wszystkie_komentarze">Komentarze</string>
    <string name="post_send_success">Post wysłany</string>
    <string name="post_send_failed">Nastąpił błąd. Nie udało się wysłać posta</string>
    <string name="post_send_button">Wyślij</string>
    <string name="post_title_name">Tytuł</string>
    <string name="post_body_name">Treść</string>
    <string name="post_empty_data">Tytuł i treść nie mogą być puste</string>
    <string name="add_post_button">Dodaj nowy post</string>
</resources>
